Bug 115566 - Custom bullet (-) in presentation not exported into SVG
Summary: Custom bullet (-) in presentation not exported into SVG
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
6.0.1.1 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: filter:svg
Depends on:
Blocks: SVG-Save
  Show dependency treegraph
 
Reported: 2018-02-09 02:21 UTC by Aron Budea
Modified: 2022-01-17 15:05 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample ODP (11.63 KB, application/vnd.oasis.opendocument.presentation)
2018-02-09 02:21 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2018-02-09 02:21:15 UTC
Created attachment 139713 [details]
Sample ODP

In the attached slide the bullet is substituted with "-" (hyphen-minus) character.
In online LO, during slideshow the "-" isn't shown, only the entries.
In desktop LO the minus is shown fine during slideshow.
Comment 1 Aron Budea 2018-02-21 02:51:29 UTC
Since the slideshow plays an exported SVG, the issue is with SVG export.
Export the presentation to SVG, and open eg. in Inkscape (strangely Draw doesn't show any content, but Inkscape does).
Comment 2 QA Administrators 2019-02-22 03:43:40 UTC Comment hidden (obsolete)
Comment 3 Roman Kuznetsov 2019-02-22 07:52:21 UTC
still repro in

Version: 6.3.0.0.alpha0+
Build ID: c57dc7d41bd62f933cffab6131edb7252606382d
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 4 QA Administrators 2021-02-22 03:59:43 UTC Comment hidden (obsolete)
Comment 5 Miklos Vajna 2022-01-17 13:07:19 UTC
https://cgit.freedesktop.org/libreoffice/core/commit/?id=bbc4360b5beb012adf1e2652328d3e18d66224aa

Forgot to mention the bug number in the commit message, sorry.
Comment 6 Commit Notification 2022-01-17 15:05:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/4fdce46b4392d046791c3c9df25062d0db5b549e

tdf#115566 SVG export: fix missing custom bullets

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.